# approximation-app-server

./: .gitignore  CMakeLists.txt  resources.qrc  server.cpp  server.h
